# uproot5

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TAtest2.root  build-uproot4.sh  codecov.yml  my_script.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  test_ntuple_bit.root  test_ntuple_int_5e4.root  test_ntuple_int_multicluster.root  test_ntuple_stl_containers-2.root  tmp.py  uproot-issue-880.root
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  documentation.md  feature-request.md
.github/workflows/: build-distributions.yml  build-test.yml  deploy.yml  emscripten.yml  pythonpackage.yml  semantic-pr-title.yml  upload-nightly-wheels.yml
dev/: example-objects.py  make-models.py
dev/custom-interpretation/: README.md  example.py
dev/custom-interpretation/AsCustom/: __init__.py  should_be_cpp.py
dev/custom-interpretation/bes3/: __init__.py  should_be_cpp.py
dev/custom-interpretation/tiny_reader/: __init__.py  should_be_cpp.py
dev/custom-interpretation/tiny_reader/gen-data/: CMakeLists.txt  example.root
dev/custom-interpretation/tiny_reader/gen-data/include/: LinkDef.h  TMyObject.hh  TMySubObject.hh
dev/custom-interpretation/tiny_reader/gen-data/src/: TMyObject.cc  TMySubObject.cc  main.cc
docs-sphinx/: basic.rst  conf.py  index.rst  make_changelog.py  prepare_docstrings.py  requirements.txt  uproot3-to-4.rst
src/uproot/: __init__.py  _awkward_forth.py  _awkwardforth.py  _dask.py  _util.py  _writing.py  behavior.py  cache.py  compression.py  const.py  containers.py  deserialization.py  dynamic.py  exceptions.py  extras.py  model.py  pyroot.py  reading.py  serialization.py  streamers.py  version.py  writing.py
src/uproot/behaviors/: RNTuple.py  RooCurve.py  RooHist.py  TAxis.py  TBranch.py  TBranchElement.py  TDatime.py  TGraph.py  TGraphAsymmErrors.py  TGraphErrors.py  TH1.py  TH2.py  TH2Poly.py  TH3.py  TParameter.py  TProfile.py  TProfile2D.py  TProfile3D.py  TTree.py  __init__.py
src/uproot/interpretation/: __init__.py  custom.py  (+7 more)
tests/: __init__.py  conftest.py  test_0000-getting-started.py  test_0001-source-class.py  test_0001_source_class.py  test_0006-notify-when-downloaded.py  test_0006_notify_when_downloaded.py  test_0007-single-chunk-interface.py  test_0007_single_chunk_interface.py  test_0008-start-interpretation.py  test_0008_start_interpretation.py  test_0009-nested-directories.py  test_0009_nested_directories.py  test_0010-start-streamers.py  test_0010_start_streamers.py  test_0011-generate-classes-from-streamers.py  test_0011_generate_classes_from_streamers.py  test_0012-rntuple-anchor.py  test_0013-rntuple-anchor.py  test_0013_rntuple_anchor.py  test_0014-all-ttree-versions.py  test_0014_all_ttree_versions.py  test_0016-interpretations.py  test_0016_interpretations.py  test_0017-multi-basket-multi-branch-fetch.py  test_0017_multi_basket_multi_branch_fetch.py  test_0018-array-fetching-interface.py  test_0018_array_fetching_interface.py  test_0022-number-of-branches.py  test_0022_number_of_branches.py  test_0023-more-interpretations-1.py  test_0023-ttree-versions.py  test_0028-fallback-to-read-streamer.py  test_0028_fallback_to_read_streamer.py  test_0029-more-string-types.py  test_0029_more_string_types.py  test_0031-test-stl-containers.py  test_0031_test_stl_containers.py  test_0033-more-interpretations-2.py  test_0033_more_interpretations_2.py  (+317 more)
tests-cuda/: test_0630_rntuple_basics.py  test_0662_rntuple_stl_containers.py  test_0962_rntuple_update.py  test_1159_rntuple_cluster_groups.py  test_1191_rntuple_fixes.py  test_1223_more_rntuple_types.py  test_1250_rntuple_improvements.py  test_1285_rntuple_multicluster_concatenation.py  test_1347_rntuple_floats_suppressed_cols.py  test_1411_rntuple_physlite_ATLAS.py
tests-wasm/: test_1272_basic_functionality.py  test_1272_basic_pyodide_functionality.py  test_1272_basic_rntuple_reading.py  test_1272_basic_ttree_reading.py  test_1272_http_reading.py  test_1365_awkwardforth_reading.py  utils.py
tests/samples/: h_dynamic.pkl
uproot/: __init__.py  _util.py  cache.py  compression.py  const.py  containers.py  deserialization.py  dynamic.py  exceptions.py  extras.py  model.py  reading.py  streamers.py  version.py
uproot/behaviors/: TAxis.py  TBranch.py  TBranchElement.py  TGraphAsymmErrors.py  TH1.py  TH2.py  TH2Poly.py  TH3.py  TParameter.py  TProfile.py  TProfile2D.py  TProfile3D.py  TTree.py  __init__.py
uproot/interpretation/: __init__.py  grouped.py  identify.py  jagged.py  library.py  numerical.py  objects.py  strings.py
uproot/language/: __init__.py  python.py
uproot/models/: RNTuple.py  TArray.py  TAtt.py  TBasket.py  TBranch.py  THashList.py  TLeaf.py  TList.py  TNamed.py  TObjArray.py  TObjString.py  TObject.py  TRef.py  TString.py  TTree.py  __init__.py
uproot/source/: __init__.py  chunk.py  cursor.py  file.py  futures.py  http.py  object.py  xrootd.py
uproot4/: ReadOnlyFile.py  __init__.py  _const.py  _util.py  cache.py  compression.py  const.py  containers.py  deserialization.py  dynamic.py  exceptions.py  extras.py  futures.py  generate.py  model.py  reading.py  stl_containers.py  streamers.py  version.py
uproot4/behaviors/: TAxis.py  TBranch.py  TBranchElement.py  TH1.py  TH2.py  TH2Poly.py  TH3.py  TProfile.py  TProfile2D.py  TProfile3D.py  TTree.py  __init__.py
uproot4/compute/: __init__.py  python.py
uproot4/interpret/: __init__.py  jagged.py  library.py  numerical.py  objects.py  strings.py
uproot4/interpretation/: __init__.py  grouped.py  identify.py  jagged.py  library.py  numerical.py  objects.py  strings.py
uproot4/language/: __init__.py  python.py
uproot4/models/: RNTuple.py  TArray.py  TAtt.py  TBasket.py  TBranch.py  THashList.py  TLeaf.py  TList.py  TNamed.py  TObjArray.py  TObjString.py  TObject.py  TRef.py  TString.py  TTree.py  __init__.py
uproot4/source/: __init__.py  chunk.py  cursor.py  file.py  futures.py  http.py  memmap.py  object.py  source.py  xrootd.py
(+59 files in other folders)
