[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
  "hatch-vcs"
]

[dependency-groups]
dev = [
  {include-group = "extra"},
  {include-group = "test"}
]
extra = [
  "boost_histogram>=0.13",
  "dask-awkward>=2025.5.0",
  "dask[array,distributed]",
  "hist>=1.2",
  "pandas",
  "awkward-pandas"
]
test = [
  "aiohttp",
  "deflate",
  "fsspec-xrootd>=0.5.0",
  "isal",
  "paramiko",
  "pytest-rerunfailures",
  "rangehttpserver",
  "requests",
  "s3fs",
  {include-group = "test-core"}
]
test-core = [
  "pytest-timeout",
  "pytest>=6",
  "scikit-hep-testdata"
]
test-gpu = [
  "kvikio-cu12>=25.02.01",
  {include-group = "test-core"}
]
test-pyodide = [
  "pytest-pyodide; python_version >='3.11'",
  {include-group = "test-core"}
]

[project]
authors = [
  {name = "Jim Pivarski", email = "jpivarski@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = [
  "awkward>=2.8.2",
  "cramjam>=2.5.0",
  "xxhash",
  "numpy",
  "fsspec!=2025.7.0",
  "packaging",
  "typing_extensions>=4.1.0; python_version < '3.11'"
]
description = "ROOT I/O in pure Python and NumPy."
dynamic = [
  "version"
]
license = "BSD-3-Clause"
name = "uproot"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
GDS_cu11 = [
  "kvikio-cu11>=25.02.01"
]
GDS_cu12 = [
  "kvikio-cu12>=25.02.01"
]
http = ["aiohttp"]
s3 = ["s3fs"]
xrootd = ["fsspec-xrootd>=0.5.0"]

[project.urls]
Download = "https://github.com/scikit-hep/uproot5/releases"
Homepage = "https://github.com/scikit-hep/uproot5"

[tool.hatch.build.hooks.vcs]
version-file = "src/uproot/version.py"

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = [
  "error",
  "default:module 'sre_.*' is deprecated:DeprecationWarning",
  "ignore:unclosed transport <asyncio.sslproto._SSLProtocolTransport"  # https://github.com/aio-libs/aiohttp/issues/1115
]
log_level = "INFO"
markers = [
  "slow",
  "network",
  "distributed",
  "xrootd"
]
minversion = "6.0"
testpaths = ["tests"]
timeout = 600
xfail_strict = true

[tool.repo-review]
ignore = ["PY004"]

[tool.ruff]
exclude = [
  "tests/*.py",
  "tests-cuda/*.py",
  "src/uproot/__init__.py",
  "docs-sphinx/*.py"
]

[tool.ruff.lint]
extend-select = [
  "B",  # flake8-bugbear
  "I",  # isort
  # "ARG", # flake8-unused-arguments
  "C4",  # flake8-comprehensions
  "ISC",  # flake8-implicit-str-concat
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PL",  # pylint
  "PT",  # flake8-pytest-style
  "RUF",  # Ruff-specific
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "UP",  # pyupgrade
  "YTT"  # flake8-2020
]
ignore = [
  "PGH003",  # too-broad type ignore
  "PLC0415",  # imports outside top level
  "PLC1901",  # empty string is falsey (but I don't want to rely on such weak typing)
  "PLR",
  "PLW0120",  # else on loop without break
  "PLW1641",  # __eq__ without __hash__
  "RUF012",  # enforces type annotations on a codebase that lacks type annotations
  "S307",  # no eval allowed
  "SIM103",  # interferes with my if-elif-elif-else blocks
  "SIM114",  # combine `if` branches using logical `or` operator
  "SIM118"  # key in dict, broken since uproot doesn't behave like a dict
]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"dev/*" = ["T20", "T201"]
"src/uproot/*/file.py" = ["SIM115"]

[tool.setuptools_scm]
write_to = "src/uproot/_version.py"
