[metadata]
name = uproot
description = ROOT I/O in pure Python and NumPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/uproot4
download_url = https://github.com/scikit-hep/uproot4/releases
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD 3-clause
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities


[options]
packages = find:
install_requires =
    numpy
python_requires = >=2.6, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
package_dir =
    =src

[options.packages.find]
where = src

[tool:pytest]
addopts = -vv -rs -Wd
testpaths =
    tests
markers =
    slow
    network
    xrootd

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
ignore = E203, W503, E501, E266, N
max-complexity = 100
exclude = tests, setup.py, uproot/__init__.py, docs-sphinx
