[metadata]
name = uproot
description = ROOT I/O in pure Python and NumPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/uproot4
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
download_url = https://github.com/scikit-hep/uproot4/releases

[options]
packages = find:
install_requires =
    numpy
    setuptools
    awkward>=1.9.0rc1
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -vv -rs -Wd
testpaths =
    tests
markers =
    slow
    network
    xrootd

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
ignore = E203, W503, E501, E266, N, D200, D102, D105, D107, D401, D402, D205, D400, D301
max-complexity = 100
exclude = tests/*.py, setup.py, src/uproot/__init__.py, docs-sphinx/*.py
