[metadata]
name = uproot
description = ROOT I/O in pure Python and NumPy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/uproot4
author = Jim Pivarski
author_email = pivarski@princeton.edu
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Topic :: Utilities
download_url = https://github.com/scikit-hep/uproot4/releases

[options]
packages = find:
install_requires =
    awkward>=1.9.0rc1
    numpy
    setuptools
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src

[tool:pytest]
addopts = -vv -ra -Wd
testpaths =
    tests
markers =
    slow
    network
    xrootd
timeout = 600

[tool:isort]
profile = black

[flake8]
extend-ignore = E203, E501, E722, B950, E266, D
extend-select = B9, E711, D103
max-complexity = 100
exclude = tests/*.py, setup.py, src/uproot/__init__.py, docs-sphinx/*.py
per-file-ignores =
    dev/*: T
